k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-backend
spec:
  selector:
    app: url-shortener-backend
  ports:
    - port: 3100
      targetPort: 3100
