k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-frontend
spec:
  selector:
    app: url-shortener-frontend
  ports:
    - port: 80
      targetPort: 80
