k8s/base/netpol-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-allow-frontend-and-ingress
spec:
  podSelector:
    matchLabels:
      app: url-shortener-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: url-shortener-frontend
      ports:
        - protocol: TCP
          port: 3100
